# computer-setup

./: .docker-ls.yaml  K8s.md  OpenWRT.md  README.md  Vagrant-k8s.md  Vagrant-microk8s.txt  android-termux.sh  bootstrap-termux.sh  bootstrap.sh  chrome-api-keys.md  debian-backports.sh  debian-desktop-playbook.yml  debian-dev-tools-amd64.sh  debian-dev-tools.sh  debian-devtools-playbook.yml  debian-dkms-playbook.yml  debian-docker.sh  debian-install.sh  debian-playbook.yml  debian-wsl-intstall.sh  debian.cmd  dev-tools-amd64.sh  esxi-thick-to-thin.md  esxi.md  install-debian.sh  install-zsh.sh  mac-install.sh  macOS.md  mssql.md  pi-router.sh  pi-server-docker-registry.sh  pi-server-gitlab-runner-cache.sh  pi-server-gitlab.sh  putty.txt  ssh-create-keys.sh  telegraf-windows.md  vagrant-esxi.md  windows-install.cmd  windows-install.txt  zram-install.sh  (+1 more)
.github/workflows/: ci.yml  test-core-plabooks.yml  test-core-playbooks.yml  test-dektiop-plabooks.yml  test-desktop-playbooks.yml
gitlab-runner/builder-node/: Makefile
gitlab-runner/builder-node-go/: Dockerfile  Makefile
gitlab/builder/: Makefile  README.md
gitlab/builder/builder-buildpack/: .gitignore  Dockerfile  Makefile
gitlab/builder/builder-node-dotnet/: .gitignore  Makefile
gitlab/project_cmake/native/: CMakeLists.txt  helloworld.cpp
gitlab/project_node/: .gitlab-ci.yml  README.md  package-lock.json
gitlab/project_node_and_dotnet/: .gitlab-ci.yml  README.md
old/: README.md  Vagrant-k8s.md  Vagrant-microk8s.txt  esxi.md  pi-server-docker-registry.sh  pi-server-gitlab.sh  vagrant-esxi.md
(+23 files in other folders)
